<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rayan.alertdialogs.Activity3Fragment"
    tools:showIn="@layout/activity_3"
    android:background="@drawable/images1">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/police"
        android:id="@+id/b1"
        android:layout_margin="3dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambulance"
        android:layout_margin="3dp"
        android:id="@+id/b2"
        android:layout_below="@+id/b1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/b1"
        android:layout_alignEnd="@+id/b1"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fire"
        android:layout_margin="3dp"
        android:id="@+id/b3"
        android:layout_below="@+id/b2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/b2"
        android:layout_alignEnd="@+id/b2"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/womenhe"
        android:layout_margin="3dp"
        android:id="@+id/b4"
        android:layout_below="@+id/b3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/b3"
        android:layout_alignEnd="@+id/b3"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/childab"
        android:id="@+id/b5"
        android:layout_below="@+id/b4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aids"
        android:id="@+id/b6"
        android:layout_below="@+id/b5"
        android:layout_margin="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disman"
        android:id="@+id/b7"
        android:layout_margin="3dp"
        android:layout_below="@+id/b6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/b6"
        android:layout_alignEnd="@+id/b6"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood"
        android:id="@+id/b8"
        android:layout_below="@+id/b7"
        android:layout_margin="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/b7"
        android:layout_alignEnd="@+id/b7"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/railway"
        android:id="@+id/b9"
        android:layout_below="@+id/b8"
        android:layout_margin="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/b8"
        android:layout_alignEnd="@+id/b8"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ragging"
        android:id="@+id/b10"
        android:layout_below="@+id/b9"
        android:layout_margin="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/b9"
        android:layout_alignEnd="@+id/b9"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>
</RelativeLayout>
</ScrollView>