<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rayan.alertdialogs.helpactivity"
    android:background="@drawable/images1"
    android:clickable="true">

    <TextView
        android:id="@+id/safety"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/safety_detail"
        android:textColor="#022451"
        android:textColorHighlight="@android:color/primary_text_dark"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        />
    <TextView android:text="@string/email1"
        android:layout_width="match_parent"
        android:id="@+id/email1"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:layout_below="@+id/safety"/>

    <TextView android:text="@string/email2"
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:layout_below="@+id/email1"
        />

</RelativeLayout>
</ScrollView>