<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rayan.alertdialogs.Main22Activity"
    tools:showIn="@layout/activity_main22"
    android:background="@drawable/images1">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/supp_name"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:hint="@string/supp_name"
        android:textColorHint="#022451"
        android:textColor="#022451" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/supp_no"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/supp_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/supp_name"
        android:layout_alignEnd="@+id/supp_name"
        android:hint="@string/supp_num"
        android:textColorHint="#022451"
        android:textColor="#022451" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_supporter"
        android:id="@+id/textView"
        android:textSize="33sp"
        android:textColor="#022451"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <Button
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/save_button"
        android:id="@+id/b1"
        android:layout_marginTop="85dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:layout_below="@+id/supp_no"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
