<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:background="@drawable/images1">

    <Button
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/okb"
        android:id="@+id/okbutton"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supp_name"
        android:id="@+id/supp_name"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supp_num"
        android:id="@+id/supp_no"
        android:textSize="20dp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/supp_name"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/name"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:layout_alignRight="@+id/okbutton"
        android:layout_alignEnd="@+id/okbutton"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/no"
        android:layout_marginTop="37dp"
        android:textSize="20dp"
        android:layout_below="@+id/name"
        android:layout_alignRight="@+id/okbutton"
        android:layout_alignEnd="@+id/okbutton"/>

</RelativeLayout>