<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rayan.alertdialogs.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/images1">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:id="@+id/showButtonId"
        android:src="@drawable/pb"
        android:clickable="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_support"
        android:id="@+id/manage_support"
        android:layout_alignParentTop="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/request_call_id"
        android:layout_alignEnd="@+id/request_call_id" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_call"
        android:id="@+id/request_call_id"
        android:layout_below="@+id/manage_support"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignRight="@+id/request_a_ride"
        android:layout_alignEnd="@+id/request_a_ride" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_ride"
        android:id="@+id/request_a_ride"
        android:layout_below="@+id/request_call_id"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignRight="@+id/text100"
        android:layout_alignEnd="@+id/text100"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text100"
        android:id="@+id/text100"
        android:layout_below="@+id/request_a_ride"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_margin="3dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:background="@drawable/buttonshape"
        android:shadowColor="#2c61e2"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_above="@+id/showButtonId"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:id="@+id/helpbutton"
        android:src="@drawable/help"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:scaleType="fitXY"
        android:layout_alignBottom="@+id/showButtonId"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/login"
        android:layout_toEndOf="@+id/login" />


</RelativeLayout>
